src/components/common/MatchInput/MatchInput.module.scss
.matchInput {
  padding: 8px;
  display: flex;
  align-items: center;
  position: relative;
  height: 52px;

  label {
    font-size: 14px;
    white-space: nowrap;
    overflow-x: hidden;
    margin: 0 4px;
    // max-width: 50px;
  }

  label:last-of-type {
    margin-left: auto;
  }

  .centerContainer {
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);
    display: flex;
    flex-direction: column;
    align-items: center;

    .inputsContainer {
      display: flex;
      input {
        font-size: 17px;
        background: transparent;
        max-width: 30px;
        outline: none;
        color: black;
        text-align: center;
        border: 1px solid #767676;

        /* Chrome, Safari, Edge, Opera */
        &::-webkit-outer-spin-button,
        &::-webkit-inner-spin-button {
          -webkit-appearance: none;
          margin: 0;
        }

        /* Firefox */
        &[type="number"] {
          -moz-appearance: textfield;
        }

        &:disabled {
          opacity: 0.8;
        }
      }

      input + input {
        margin-left: 6px;
      }

      input.GOALS_MATCH {
        background: #309e3a;
        border-color: #309e3a;
      }

      input.WINNER_MATCH {
        background: #0093dd;
        border-color: #0093dd;
      }

      input.WRONG {
        background: #f9aa51;
        border-color: #f9aa51;
      }
    }

    .date {
      font-size: 13px;
      color: #767676;
      white-space: nowrap;
      cursor: default;

      &:has(span) {
        margin-top: 4px;
      }

      display: flex;
      align-items: center;
      span {
        margin-right: 5px;
      }
      :has(> img):first-of-type {
        margin-right: 3px;
      }
      :has(> img):last-of-type {
        margin-left: 3px;
      }
    }
  }
}

